add complete v1.0 of subclass-dance-party

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
-    <title>Object Dance Party</title>
+    <title>RAVE!!!</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
-    <script src="src/spongebob.js"></script>
-    <script src="src/jellyfish.js"></script>
-    <script src="src/squidward.js"></script>
-    <script src="src/patrick.js"></script>
+    <script src="src/cat.js"></script>
+    <script src="src/seal.js"></script>
+    <script src="src/cockatoo.js"></script>
+    <script src="src/bear.js"></script>
   </head>
 
   <body>
     <div class="topbar">
-      <span class="title">JELLYFISH JAM</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="blinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="jellyFish">add a Jellyfish</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SpongeBob">add SpongeBob</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SquidWard">add Squidward</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="PatrickStar">add Patrick</a>
+      <span class="title"><a href="https://D474designs.webs.com" target="_blank">WAREHOUSE PARTY</a></span>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="blinkyDancer">add blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="seal">add seal</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="cat">add cat</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="cockatoo">add cockatoo</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="bear">add bear</a>
       <button class='lineUpButton' name='lineUp'>Line Up</button>
     </div>
     <script src="src/init.js"></script>
-    <audio id="audio_play">
-        <source src="stadium-rave.mp3" type="audio/mp3" />
-    </audio>
   </body>
-
+  <footer>
+    <p>&nbsp; &nbsp; &nbsp; &nbsp;<a href="https://D474media.webs.com">--------------------> D474media</a>™</p>
+    <audio controls>
+    <source src="mp3/Grupo Codiciado - Gente De Accionar.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+    </audio>
+  </footer>
 </html>
