--- a/dancefloor.html
+++ b/dancefloor.html
@@ -22,6 +22,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="cockatoo">add cockatoo</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="bear">add bear</a>
       <button class='lineUpButton' name='lineUp'>Line Up</button>
+      <button class='breakUpButton' name='breakUp'>Break!</button>
     </div>
     <script src="src/init.js"></script>
   </body>
